# ethercatest

./: README.md  build.zig  build.zig.zon  cx9020.txt  ethercatest.sh  meson.build  meson_options.txt
src/: ethercatest-gatorcat.zig  ethercatest-igh.c  ethercatest-soem.c  ethercatest.c  ethercatest.h  meson.build
